fix some bugs on firefox

--- a/web/app/static/css/style.css
+++ b/web/app/static/css/style.css
@@ -1,6 +1,9 @@
 html, body {width: 100%;height: 100%;font-family: Roboto, sans-serif;-webkit-font-smoothing: antialiased;}
 input:-webkit-autofill {-webkit-box-shadow: 0px 100px #000 inset;-webkit-text-fill-color: white;border-bottom: 3px solid #0089cc;}
 input::-webkit-input-placeholder{color:#fff !important;font-size: 14px;}
+input::-moz-placeholder{color:#fff !important;font-size: 14px;}
+input::-ms-input-placeholder{color:#fff !important;font-size: 14px;}
+.clear{clear: both;}
 .dashboard{overflow: auto!important;}
 /*navBar*/
 .head {position: fixed;top: 0;left: 0;width: 100%;z-index: 111;}
@@ -11,7 +14,7 @@ input::-webkit-input-placeholder{color:#fff !important;font-size: 14px;}
 .icon > div:first-child{background: url('../images/icon.jpg') no-repeat center !important;background-size: 40px!important;}
 .icon div span {color: #D7F4F6!important;line-height: 35px;}
 /*content*/
-.searchForm > div +div {position: relative;top: -4px;left: 10px;}
+.searchForm > div + div {position: relative;top: -4px;left: 10px;}
 .table {padding: 0 15px;}
 .table th,.table td{vertical-align: middle!important;}
 .scrollDialog {width:75%;max-height: 80%;overflow-y: auto;overflow-x:hidden; }
